--- a/ninety_nine_cats/app/views/cat_rental_requests/new.html.erb
+++ b/ninety_nine_cats/app/views/cat_rental_requests/new.html.erb
@@ -1,1 +1,16 @@
-<form action="<%= %>" method="post"></form>
+<form action="<%= cat_rental_requests_url %>" method="post">
+    <label for="cat_id">Pick a cat!</label>
+    <select name="cat_rental_request[cat_id]" id="cat_id">
+        <% Cat.all.each do |cat| %>
+            <option value="<%=cat.id%>"><%=cat.name%></option>
+        <% end %>
+    </select>
+
+    <label for="start_date">Rental Start Date</label>
+    <input type="date" name="cat_rental_request[start_date]" id="start_date">
+
+    <label for="end_date">End date</label>
+    <input type="date" name="cat_rental_request[end_date]" id="end_date">
+
+    <button type="submit">Create</button> 
+</form>
